# sdl_dash

./: .gitignore  .gitmodules  .timetracker  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
supergoon_dash/: CMakeLists.txt  main.cpp
supergoon_dash/assets/actors/: banana.json  player.json  trampoline.json
supergoon_dash/assets/config/: cfg.ini  cfg.lua  levels.lua
supergoon_dash/assets/sfx/: bgm.lua  sfx.lua
supergoon_dash/assets/sfx/Desktop/: Master.bank  Master.strings.bank
supergoon_dash/assets/tiled/: level_1..lua  level_1.lua  level_1.tmx
supergoon_dash/assets/tiled/tilesets/: backgrounds.lua  backgrounds.tsx  level_1.lua  terrain..lua  terrain.tsx
supergoon_dash/supergoon_dash/actors/: fruit_pickup.cpp  fruit_pickup.hpp  level_end.cpp  level_end.hpp  player.cpp  player.hpp  trampoline.cpp  trampoline.hpp
supergoon_engine/: CMakeLists.txt  bootstrap.sh
supergoon_engine/lib/SDL2-2.0.22/: CMakeLists.txt
supergoon_engine/lib/SDL2-2.0.22/src/audio/: SDL_audiocvt.c
supergoon_engine/primitives/: Vector2.h
supergoon_engine/src/supergoon_engine/animation/: animation.hpp  animation_transition.cpp  animation_transition.hpp  finish_animation_transition.cpp  finish_animation_transition.hpp  function_animation_transition.cpp  function_animation_transition.hpp
supergoon_engine/src/supergoon_engine/aseprite/: aseprite_animation.hpp  aseprite_frame.hpp  aseprite_sheet.cpp  aseprite_sheet.hpp
supergoon_engine/src/supergoon_engine/components/: animation_component.cpp  animation_component.hpp  box_collider_component.cpp  box_collider_component.hpp  camera_boom_component.cpp  camera_boom_component.hpp  input_component.cpp  input_component.hpp  rigidbody_component.cpp  rigidbody_component.hpp  sprite_component.cpp  sprite_component.hpp
supergoon_engine/src/supergoon_engine/engine/: colors.hpp  component.cpp  component.hpp  content.cpp  content.hpp  debug.cpp  debug.hpp  engine_tags.hpp  gameobject.cpp  gameobject.hpp  gravity.cpp  gravity.hpp  level.cpp  level.hpp  level_state_machine.cpp  level_state_machine.hpp  world.cpp  world.hpp
supergoon_engine/src/supergoon_engine/graphics/: graphics_device.cpp  graphics_device.hpp  sprite_batch.cpp  sprite_batch.hpp
supergoon_engine/src/supergoon_engine/input/: controller.cpp  controller.hpp  input.cpp  input.hpp  player_controller.cpp  player_controller.hpp
supergoon_engine/src/supergoon_engine/interfaces/: i_begin_run.cpp  i_begin_run.hpp  i_debug.cpp  i_debug.hpp  i_draw.cpp  i_draw.hpp  i_initialize.hpp  i_reset.cpp  i_reset.hpp  i_sound.cpp  i_sound.hpp  i_state.cpp  i_state.hpp  i_state_machine.cpp  i_state_machine.hpp  i_tags.cpp  i_tags.hpp  i_update.hpp
supergoon_engine/src/supergoon_engine/lua/: lua_helper.cpp  lua_helper.hpp  lua_loader.cpp  lua_loader.hpp
supergoon_engine/src/supergoon_engine/objects/: actor.cpp  actor.hpp  camera.cpp  camera.hpp  tile.cpp  tile.hpp
supergoon_engine/src/supergoon_engine/physics/: gravity.cpp  physics.cpp  physics.hpp
supergoon_engine/src/supergoon_engine/primitives/: gametime.cpp  gametime.hpp  point.cpp  point.hpp  rectangle.cpp  rectangle.hpp  sprite.cpp  sprite.hpp  vector2.cpp  vector2.hpp
supergoon_engine/src/supergoon_engine/sound/: sound.cpp  sound.hpp
supergoon_engine/src/supergoon_engine/tiled/: layer_group.hpp  tile_layer.hpp  tiled_loader.cpp  tiled_loader.hpp  tsx.hpp
supergoon_engine/supergoon_engine/: test.h
supergoon_engine/supergoon_engine/aseprite/: aseprite_sheet.cpp
supergoon_engine/supergoon_engine/components/: animation_component.cpp  sprite_component.cpp  sprite_component.hpp
supergoon_engine/supergoon_engine/engine/: component.cpp  component.hpp  content.cpp  content.hpp  gameobject.cpp  gameobject.hpp  world.cpp  world.hpp
supergoon_engine/supergoon_engine/graphics/: graphics_device.cpp  graphics_device.hpp  sprite_batch.cpp
supergoon_engine/supergoon_engine/ini/: config_reader.cpp  config_reader.hpp  ini.hpp
supergoon_engine/supergoon_engine/interfaces/: IUpdate.cpp  IUpdate.hpp  i_initialize.cpp  i_update.cpp
supergoon_engine/supergoon_engine/json/: json_parser.cpp  json_parser.hpp
supergoon_engine/supergoon_engine/lua/: lua_helper.cpp  lua_loader.cpp  lua_loader.hpp
supergoon_engine/supergoon_engine/objects/: actor.cpp  actor.hpp  camera.cpp  camera.hpp  tile.cpp  tile.hpp
supergoon_engine/supergoon_engine/primitives/: gametime.cpp  gametime.hpp  rectangle.hpp
supergoon_engine/supergoon_engine/sound/: sound.cpp  sound.hpp
supergoon_engine/supergoon_engine/tiled/: layer_group.hpp  tile_layer.hpp  tiled.cpp  tiled.hpp  tiled_loader.cpp  tiled_loader.hpp  tilemap.hpp  tileset_info.hpp  tsx.hpp
supergoon_engine/supergoon_engine/xml/: tinyxml2.cpp  tinyxml2.h  xml_parser.cpp  xml_parser.h  xml_parser.hpp
